--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,40 @@ select {
 body {
   font-family: "Inter", sans-serif;
 }
+
+@layer components {
+  .range-slider {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 100%;
+    height: 0.25rem;
+    border-radius: 0.5rem;
+    outline: none;
+
+    background: linear-gradient(
+      to right,
+      var(--color-active-100) 0%,
+      var(--color-active-100) var(--progress),
+      var(--color-lavander-100) var(--progress),
+      var(--color-lavander-100) 100%
+    );
+  }
+
+  .range-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 1rem;
+    height: 1rem;
+    background: var(--color-active-100);
+    border-radius: 100%;
+    cursor: pointer;
+  }
+
+  .range-slider::-moz-range-thumb {
+    width: 1rem;
+    height: 1rem;
+    background: var(--color-active-100);
+    border-radius: 100%;
+    cursor: pointer;
+    border: none;
+  }
+}
