adds UploadFile component with DeleteIcon

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-deepIndigo: #000853;
+  --color-textGrey: #898DA9;
 
   --color-lavander-50: #F0EAF8;
   --color-lavander-100: #CBB6E5;
