--- a/src/index.css
+++ b/src/index.css
@@ -36,15 +36,14 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+/* ------------------- */
+/* RangeSlider         */
+/* ------------------- */
 @layer components {
   .range-slider {
+    @apply w-full h-1 rounded-lg outline-none;
     appearance: none;
     -webkit-appearance: none;
-    width: 100%;
-    height: 0.25rem;
-    border-radius: 0.5rem;
-    outline: none;
-
     background: linear-gradient(
       to right,
       var(--color-active-100) 0%,
@@ -55,20 +54,42 @@ body {
   }
 
   .range-slider::-webkit-slider-thumb {
+    @apply appearance-none w-4 h-4 bg-active-100 rounded-full cursor-pointer;
     -webkit-appearance: none;
-    width: 1rem;
-    height: 1rem;
-    background: var(--color-active-100);
-    border-radius: 100%;
-    cursor: pointer;
   }
 
   .range-slider::-moz-range-thumb {
-    width: 1rem;
-    height: 1rem;
-    background: var(--color-active-100);
-    border-radius: 100%;
-    cursor: pointer;
-    border: none;
+    @apply border-0 w-4 h-4 bg-active-100 rounded-full cursor-pointer;
+  }
+}
+
+/* ------------------- */
+/* Calendar            */
+/* ------------------- */
+@layer components {
+  .react-calendar {
+    @apply bg-white rounded-lg border border-lavander-100 w-full p-6;
+    
+  }
+
+  .react-calendar__navigation {
+    @apply flex p-3;
+  }
+
+  .react-calendar__navigation__prev2-button,
+  .react-calendar__navigation__next2-button {
+    @apply hidden;
+  }
+
+  .react-calendar__month-view__weekdays {
+    @apply grid grid-cols-7 text-sm font-medium text-center py-2;
+  }
+
+  .react-calendar__month-view__weekdays abbr {
+    @apply no-underline;
+  }
+
+  .react-calendar__month-view__days button {
+    @apply p-2 cursor-pointer;
   }
 }
