--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
   --color-active-50: #FAF9FA;
   --color-active-100: #761BE4;
+  --color-active-200: #6A19CD;
 
   --color-danger-50: #FEECEC;
   --color-danger-100: #ED4545;
